  mustBePosted() to return true.
* Using `new ImportReporter( … )` or `new ApiImportReporter( … )` without
  the $context parameter is now deprecated.
* Using `WikiImporterFactory::getWikiImporter()` without the $performer
  parameter is now deprecated.
* BlockManager::getUserBlock() was deprecated. Instead use
  BlockManager::getBlock(), which expects the caller to do ipblock-exempt
  checking.
* User::isBlocked(), ::isBlockedFromCreateAccount() and ::isBlockedFrom() now
  emit deprecation warnings. They were deprecated since 1.34, 1.37 and 1.33
  respectively.
* DatabaseBlock::newFromID() was deprecated and will emit deprecation warnings.
  Instead use DatabaseBlockStore::newFromID().
* DatabaseBlock::getAutoblockExpiry() was deprecated without replacement.
* MagicWord::getId() has been deprecated.
* MagicWordFactory::getSubstIDs() has been deprecated.
* Status::setMessageLocalizer is deprecated. Callers that want to control the
  localization of the Status object should obtain a StatusFormatter from
  the StatusFormatterFactory.
* Vuex has been deprecated in favor of its successor, Pinia. Though deprecated,
  Vuex 4 will remain accessible for the foreseeable future. Pinia should be used
  for new projects.
* Title::getBrokenLinksFrom() has been deprecated.
* ReplicatedBagOStuff has been deprecated since 1.42.
* ParserOutput::setLanguageLinks() has been deprecated.
* ApiQueryBlockInfoTrait::addBlockInfoToQuery() will emit deprecation warnings
  and will soon stop working due to schema changes. Instead use
  addDeletedUserFilter() or getBlockDetailsForRows().
* UploadBase::getImageInfo was deprecated, subclasses of ApiUpload can use
  ApiUpload::getUploadImageInfo() instead.
* DatabaseBlockStore::updateTimestamp() is now internal and should not be
  called.
* The module `mediawiki.icon` has been deprecated. Use the Codex mixin instead
  (T351681).
* Passing a WikiPage to PageEditStash::parseAndCache() has been deprecated.
  Use PageUpdater instance.