@@ -273,6 +273,10 @@ because of Phabricator reports.
 * BlockManager::getUserBlock() was deprecated. Instead use
   BlockManager::getBlock(), which expects the caller to do ipblock-exempt
   checking.
+* The `composer phpunit:entrypoint` entrypoint has been deprecated, along with
+  bootstrap.integration.php and suite.xml. Run tests with `composer phpunit`
+  instead, or simply `vendor/bin/phpunit`, which use bootstrap.php and
+  phpunit.xml.dist.
 * User::isBlocked(), ::isBlockedFromCreateAccount() and ::isBlockedFrom() now
   emit deprecation warnings. They were deprecated since 1.34, 1.37 and 1.33
   respectively.
